--- a/force-app/main/default/classes/ClassesObjectsMethods.cls
+++ b/force-app/main/default/classes/ClassesObjectsMethods.cls
@@ -26,7 +26,7 @@
  * Math class: https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_math.htm
  * Classes: https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_classes_understanding.htm
  *
- * @author Your Name
+ * @author Brandon Edoria
  */
 
 public with sharing class ClassesObjectsMethods {
@@ -38,19 +38,16 @@ public with sharing class ClassesObjectsMethods {
      * Example: practiceStringMethods() should return a list like ["17", "Hello", "hello, salesforce!"].
      * @return A list containing the length of the string, a substring of the string, and the string in lower case.
      */
-    public static List<String> practiceStringMethods() {
-        // Initialize a String with 'Hello, Salesforce!'
-        
-        // Get the length of the String        
-        // Get a substring of the String of the first 5 characters
-        // Convert the String to lower case
-        
-        // Return the list with the string data
-        // In the first position add the string length
-        // In the second position add the substring
-        // In the third position add the string in lower case
+    public static List<String> practiceStringMethods()
+    {
+        String hello = 'Hello, Salesforce!'; // Initialize string
 
-        return null; // Replace null with the variable you used to store the result
+        List<String> stringList = new List<String>(); // Initialize string list
+        stringList.add(String.valueOf(hello.length())); // Get the length of the string, convert from integer to string, add to list
+        stringList.add(hello.substring(0, 5)); // Get first 5 letters of string, add to list
+        stringList.add(hello.toLowerCase()); // Convert the string to lower case, add to list
+        
+        return stringList; // Return the list
     }
 
     /**
@@ -60,16 +57,14 @@ public with sharing class ClassesObjectsMethods {
      * @param input The input string.
      * @return A list of boolean values indicating whether the string starts with 'Sales', ends with 'Force', or contains 'Awesome'.
      */
-    public static List<Boolean> checkStringContent(String input) {
-        // Initialize a list to store the results
+    public static List<Boolean> checkStringContent(String input)
+    {
+        List<Boolean> checkList = new List<Boolean>(); // Initialize boolean list
+        checkList.add(input.startsWith('Sales')); // Does it start with 'Sales'?
+        checkList.add(input.endsWith('Force')); // Does it end with 'Force'?
+        checkList.add(input.contains('Awesome')); // Does it contain 'Awesome'?
         
-        // Check if the string starts with 'Sales'
-        
-        // Check if the string ends with 'Force'
-        
-        // Check if the string contains 'Awesome'
-        
-        return null; // Replace null with the variable you used to store the result
+        return checkList;
     }
 
     /**
@@ -79,17 +74,13 @@ public with sharing class ClassesObjectsMethods {
      * @param sentence The input sentence.
      * @return A string consisting of only unique words from the input sentence.
      */
-    public static String removeDuplicateWords(String sentence) {
-        // Split the sentence into words
+    public static String removeDuplicateWords(String sentence)
+    {
+        List<String> duplicateWords = new List<String>(sentence.split(' ')); // Initialize list of strings & split strings by ' '
+        Set<String> uniqueWords = new Set<String>(); // Initialize set of strings
+        uniqueWords.addAll(duplicateWords); // Convert list to set to remove duplicates
 
-        // Create a set to store the unique words
-
-        // Add each word to the set
-
-        // Join the unique words back into a sentence
-
-        // Return the sentence with unique words
-        return null; // Replace null with the variable you used to store the result
+        return String.join(uniqueWords, ' '); // Rejoin set of words into a string with spaces in between
     }
 
     /**
@@ -100,18 +91,18 @@ public with sharing class ClassesObjectsMethods {
      * @param s The string in which to count vowels.
      * @return The number of vowels in the string.
      */
-    public static Integer countVowels(String str) {
-        // Initialize the result Integer
+    public static Integer countVowels(String str)
+    {
+        Integer vowelCount = 0; // Initialize vowel count to 0
 
-        /*
-        for () {
-            // get individual characters from the string - hint use substring or split
-            // check if the character is a vowel
-            // if it is a vowel, increment the result Integer
+        for (String letter : str.split('')) // For loop goes through the length of the entire string
+        {
+            if (letter.equalsIgnoreCase('a') || letter.equalsIgnoreCase('e') || letter.equalsIgnoreCase('i') || letter.equalsIgnoreCase('o') || letter.equalsIgnoreCase('u')) // If it's a vowel, count it
+            {
+                vowelCount++;
+            }
         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        return vowelCount;
     }
 
     /**
@@ -121,21 +112,19 @@ public with sharing class ClassesObjectsMethods {
      * Example: findTheScientist() should return "Alan Turing,Grace Hopper,Guido van Rossum,Stephen Hawking"
      * @return A string containing the names of scientists that contain the letter 'g'.
      */
-    public static String findTheScientist() {
-        // The list of scientists' names
-        List<String> scientistNames = new List<String>{'Tim Berners-Lee', 'Alan Turing', 'Grace Hopper', 'Donald Knuth', 'Guido van Rossum', 'Ken Thompson', 'Stephen Hawking'};
+    public static String findTheScientist()
+    {
+        List<String> scientistNames = new List<String>{'Tim Berners-Lee', 'Alan Turing', 'Grace Hopper', 'Donald Knuth', 'Guido van Rossum', 'Ken Thompson', 'Stephen Hawking'}; // PROVIDED
+        List<String> nuthinButAGThang = new List<String>(); // Initialize list of strings
 
-        // The variable to store the concatenated string
-
-        // Loop through the list of scientists' names
-
-            // If the name doesn't contain the letter 'G', skip this iteration
-
-            // Add the name to the result string, followed by a comma
-
-        // Remove the last comma from the result string
-
-        return null; // Replace null with the variable you used to store the result
+        for (String likeLasagna : scientistNames) // Collection loop
+        {
+            if (likeLasagna.containsIgnoreCase('g')) // If string contains 'g', add to list
+            {
+                nuthinButAGThang.add(likeLasagna);
+            }
+        }
+        return String.join(nuthinButAGThang, ','); // Rejoin List of words into a string with commas in between
     }
 
     /**
@@ -146,13 +135,9 @@ public with sharing class ClassesObjectsMethods {
      * @param b The second number.
      * @return The absolute value of the difference
      */
-    public static Double calculateDifferenceOfSquares(Double a, Double b) {
-        // Square the input numbers using the Math.pow() function
-
-        // Calculate the absolute difference using Math.abs() function
-
-        // Return the result
-        return null; // Replace null with the variable you used to store the result
+    public static Double calculateDifferenceOfSquares(Double a, Double b)
+    {
+        return Math.abs(Math.pow(a, 2) - Math.pow(b, 2));
     }
 
     /**
@@ -161,11 +146,16 @@ public with sharing class ClassesObjectsMethods {
      * Example: generateRandomNumber() should return a number like 75.
      * @return A integer between 50 and 100.
      */
-    public static Integer generateRandomNumber() {
-        // Use Math class to generate number between 50 and 100
+    public static Integer generateRandomNumber()
+    {
+        Integer randomNumber = 0; // Initialize random number
 
-        // Return the random integer
-        return null; // Replace null with the variable you used to store the result
+        if (randomNumber <= 50 || randomNumber >= 100) // If the number isn't between 50 and 100 including, generate another number
+        {
+            randomNumber = Integer.valueOf(Math.random() * 100);
+        }
+
+        return randomNumber;
     }
 
     /**
@@ -174,13 +164,10 @@ public with sharing class ClassesObjectsMethods {
      * Example: getCurrentDate() should return a string like "3/21/2001" for US locale users. Locale/String may differ depending on your location.
      * @return The current date in the current user locale format.
      */
-    public static String getCurrentDate() {
-        // Get the todays date
-
-        // Format the current date
-
-        // Return the result
-        return null; // Replace null with the variable you used to store the result
+    public static String getCurrentDate()
+    {
+        Date currentDate = Date.today();
+        return currentDate.format();
     }
 
     /**
@@ -189,16 +176,20 @@ public with sharing class ClassesObjectsMethods {
      * @param dt the current date and time
      * @return The number of the day of the week for the given date.
      */
-    public static String getDayOfWeek(DateTime dt) {
-        // Define a map of day of the week as a key and day number as the value
-        // Monday = 1, Tuesday = 2, etc.
+    public static String getDayOfWeek(DateTime dt)
+    {
+        String currentDate = dt.format('EEEE'); // Convert DateTime variable to String of day of the week
 
-        // Get the day name using .format('EEEE');
+        Map<String, String> dayToNumber = new Map<String, String>(); // Initialize Map
+        dayToNumber.put('Monday', '1'); // Add key-value elements to map
+        dayToNumber.put('Tuesday', '2');
+        dayToNumber.put('Wednesday', '3');
+        dayToNumber.put('Thursday', '4');
+        dayToNumber.put('Friday', '5');
+        dayToNumber.put('Saturday', '6');
+        dayToNumber.put('Sunday', '7');
 
-        // Get the day number from the map using the day name
-
-        // Return the result as a string
-        return null; // Replace null with the variable you used to store the result
+        return dayToNumber.get(currentDate); // Return the number of the day of the week for the given date
     }
 
 
@@ -211,11 +202,14 @@ public with sharing class ClassesObjectsMethods {
      * @param d2 The second date.
      * @return The a positive number years between the two dates, or null if either date is null.
      */
-    public static Integer calculateYearDifference(Date d1, Date d2) {
-
-        // Subtract the difference in years
-
-        return null; // Replace null with the variable you used to store the result
+    public static Integer calculateYearDifference(Date d1, Date d2)
+    {
+        If (d1 == null || d2 == null) // Null check
+        {
+            return null;
+        }
+        
+        return Math.abs(d2.year() - d1.year());
     }
 
     /**
@@ -225,21 +219,24 @@ public with sharing class ClassesObjectsMethods {
      * This class can be used in the context of a library management system, bookstore, etc.
      * where you need to manipulate and manage book information.
      */
-    public class Book {
-        // Declare three public instance variables - title, author, pages
-        // title
-        // author
-        // pages
+    public class Book
+    {
+        // Declare public instance variables - title, author, pages
+        public String title;
+        public String author;
+        public Integer pages;
     
-        // Book constructor to initialize the title and author
-        public Book() {
-            // Initialize the title and author
+        // Book constructor to initialize the title and author. Don't initialize pages
+        public Book(String title, String author)
+        {
+            this.title = title;
+            this.author = author;
         }
-    
+
         // Method that returns the details of the book
-        public String getBookDetails() {
-            // return A string containing the details of the book in the format "Title: <title>, Author: <author>"
-            return null; // Replace null with the variable you used to store the result
+        public String getBookDetails()
+        {
+            return 'Title: ' + title + ', ' + 'Author: ' + author;
         }
     }
     
@@ -250,13 +247,14 @@ public with sharing class ClassesObjectsMethods {
      * For example, createAndGetBookDetails() should return a string like "Title: A Brief History of Time, Author: Stephen Hawking".
      * @return A string containing the details of the book.
      */
-    public static String createAndGetBookDetails() {
-        // Create a Book object with title "A Brief History of Time" and author "Stephen Hawking"
+    public static String createAndGetBookDetails()
+    {
+        // Create a new Book object with title "A Brief History of Time" and author "Stephen Hawking"
+        Book myBook = new Book('A Brief History of Time', 'Stephen Hawking');
 
         // Call the getBookDetails method on the book object to get the details of the book
-
         // Return the details of the book
-        return null; // Replace null with the variable you used to store the result
+        return myBook.getBookDetails();
     }
 
     /**
@@ -268,20 +266,29 @@ public with sharing class ClassesObjectsMethods {
      * @param myBook1 The first book object.
      * @return return a list of books.
      */
-    public static List<Book> generateBookList(Book myBook1) {
-        // Create a list of books
+    public static List<Book> generateBookList(Book myBook1)
+    {
+        // Create a list of Books
+        List<Book> myBooks = new List<Book>();
 
-        // Update the title and author of myBook1
+        // Update the title and author of myBook1 using dot notation
+        myBook1.title = 'Harry Potter and the Chamber of Secrets';
+        myBook1.author = 'J.K. Rowling';
 
         // Update the pages for myBook1 to 352
+        myBook1.pages = 352;
 
         // Create a new Book object with title "A Brief History of Time" and author "Stephen Hawking"
+        Book myBook2 = new Book('A Brief History of Time', 'Stephen Hawking');
 
-        // Update the pages for A Brief History of Time to 256
+        // Update the pages for A Brief History of Time to 256 since not in the contructor for Book class
+        myBook2.pages = 256;
 
-        // Add the book to the list
-        
-        return null; // Replace null with the variable you used to store the result      
+        // Add the books to the List of books
+        myBooks.add(myBook1);
+        myBooks.add(myBook2);
+
+        return myBooks;  
     }
 
 
@@ -292,22 +299,50 @@ public with sharing class ClassesObjectsMethods {
      * This class can be used in the context of a school, college, etc.
      * where you need to manipulate and manage person information.
      */
-    public class Person {
+    public class Person
+    {
         // Declare private two instance variables - (TEXT) name and (Number) age
+        private String name;
+        private Integer age;
         
         // Constructor to initialize the name and age
+        public Person(String name, Integer age)
+        {
+            this.name = name;
+            this.age = age;
+        }
     
         // Method introduceYourself that returns the details of the person        
         // Return a string in the format "Hello, my name is <name> and I am <age> years old."
         // For example, introduceYourself() should return a string like "Hello, my name is John Doe and I am 28 years old."
+        public String introduceYourself()
+        {
+            return 'Hello, my name is ' + this.name + ' and I am ' + this.age + ' years old.';
+        }
 
         // Getter method that returns the name of the person
+        public String getName()
+        {
+            return this.name;
+        }
 
         // Getter method that returns the age of the person
+        public Integer getAge()
+        {
+            return this.age;
+        }
 
         // Setter method that sets the name of the person
+        public void setName(String name)
+        {
+            this.name = name;
+        }
 
         // Setter method that sets the age of the person
+        public void setAge(Integer age)
+        {
+            this.age = age;
+        }
     }
 
     /**
@@ -317,18 +352,24 @@ public with sharing class ClassesObjectsMethods {
      * @return A string containing the details of the person.
      */
 
-    public static List<String> personDetails() {
-        List<String> results = new List<String>();
+    public static List<String> personDetails()
+    {
+        List<String> tellMeAboutYourself = new List<String>(); // Initialize List
+
         // Create a new instance of Person class
         // Name the person 'John Doe' and set the age to 28
+        Person newPerson = new Person('John Doe', 28);
 
         // Add the details of the person using the introduceYourself method
+        tellMeAboutYourself.add(newPerson.introduceYourself());
 
         // Get the name of the person using the getter method and add it to the list
+        tellMeAboutYourself.add(newPerson.getName());
 
         // Get the age of the person using the getter method and add it to the list
-        
-        return null; // Replace null with the variable you used to store the result
+        tellMeAboutYourself.add(String.valueOf(newPerson.getAge()));
+
+        return tellMeAboutYourself;
     }
 
     /**
@@ -338,11 +379,10 @@ public with sharing class ClassesObjectsMethods {
      * @param age The age of the person.
      * @return A new instance of the Person class.
      */
-    public static Person createPerson(String name, Integer age) {
+    public static Person createPerson(String name, Integer age)
+    {
         // Create a new instance of the Person class using the provided name and age
-        
-        // Return the new instance of the Person class
-        return null; // Replace null with the variable you used to store the result
+        return new Person(name, age);
     }
 
     /**
@@ -354,16 +394,21 @@ public with sharing class ClassesObjectsMethods {
      * @param age The age to be set for all the Person objects.
      * @return A list of new Person objects.
      */
-    public static List<Person> createMultiplePersons(List<String> names, Integer age) {
+    public static List<Person> createMultiplePersons(List<String> names, Integer age)
+    {
+        List<Person> personList = new List<Person>(); // Initialize list
 
         // Loop through each name in the provided list of names
-            // Create a new Person object for each name
-            
-            // Add the new Person object to the list of Person objects
-        
-        
+        // Create a new Person object for each name
+        // Add the new Person object to the list of Person objects
+        for (String crowdedInHere : names)
+        {
+            Person newPerson = new Person(crowdedInHere, age);
+            personList.add(newPerson);
+        }
+
         // Return the list of Person objects
-        return null; // Replace null with the variable you used to store the result
+        return personList;
     }
 
 
@@ -377,7 +422,15 @@ public with sharing class ClassesObjectsMethods {
      * @param person2 The second Person object.
      * @return The Person object of the older person.
      */
-    public static Person getOlderPerson(Person person1, Person person2) {
-        return null; // Replace null with the variable you used to store the result
+    public static Person getOlderPerson(Person person1, Person person2)
+    {
+        if (person1.getAge() > person2.getAge())
+        {
+            return person1;
+        }
+        else
+        {
+            return person2;
+        }
     }
 }
